--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "supabase:init": "supabase init",
+    "supabase:start": "supabase start",
+    "supabase:stop": "supabase stop",
+    "db:diff": "supabase db diff -f",
+    "db:reset": "supabase db reset",
+    "db:push": "supabase db push --linked",
+    "db:seed": "supabase db push --linked --include-seed",
+    "db:list": "supabase migration list --linked"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -37,6 +45,9 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -64,7 +75,9 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^16.5.0",
     "postcss": "^8",
+    "supabase": "^2.22.12",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
